build/log/idf_py_stdout_output_12751
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/jin/workspaces/esp32workspace/desktop_controller/build/bootloader/esp-idf/esptool_py && /home/jin/.espressif/python_env/idf5.3_py3.10_env/bin/python /home/jin/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 /home/jin/workspaces/esp32workspace/desktop_controller/build/bootloader/bootloader.bin
Bootloader binary size 0x5260 bytes. 0x2da0 bytes (36%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/desktop_controller.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/desktop_controller.c.obj 
/home/jin/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32s3-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/jin/workspaces/esp32workspace/desktop_controller/build/config -I/home/jin/workspaces/esp32workspace/desktop_controller/main -I/home/jin/esp/esp-idf/components/newlib/platform_include -I/home/jin/esp/esp-idf/components/freertos/config/include -I/home/jin/esp/esp-idf/components/freertos/config/include/freertos -I/home/jin/esp/esp-idf/components/freertos/config/xtensa/include -I/home/jin/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/jin/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/jin/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/jin/esp/esp-idf/components/freertos/esp_additions/include -I/home/jin/esp/esp-idf/components/esp_hw_support/include -I/home/jin/esp/esp-idf/components/esp_hw_support/include/soc -I/home/jin/esp/esp-idf/components/esp_hw_support/include/soc/esp32s3 -I/home/jin/esp/esp-idf/components/esp_hw_support/dma/include -I/home/jin/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/jin/esp/esp-idf/components/esp_hw_support/port/esp32s3/. -I/home/jin/esp/esp-idf/components/esp_hw_support/port/esp32s3/include -I/home/jin/esp/esp-idf/components/heap/include -I/home/jin/esp/esp-idf/components/log/include -I/home/jin/esp/esp-idf/components/soc/include -I/home/jin/esp/esp-idf/components/soc/esp32s3 -I/home/jin/esp/esp-idf/components/soc/esp32s3/include -I/home/jin/esp/esp-idf/components/hal/platform_port/include -I/home/jin/esp/esp-idf/components/hal/esp32s3/include -I/home/jin/esp/esp-idf/components/hal/include -I/home/jin/esp/esp-idf/components/esp_rom/include -I/home/jin/esp/esp-idf/components/esp_rom/include/esp32s3 -I/home/jin/esp/esp-idf/components/esp_rom/esp32s3 -I/home/jin/esp/esp-idf/components/esp_common/include -I/home/jin/esp/esp-idf/components/esp_system/include -I/home/jin/esp/esp-idf/components/esp_system/port/soc -I/home/jin/esp/esp-idf/components/esp_system/port/include/private -I/home/jin/esp/esp-idf/components/xtensa/esp32s3/include -I/home/jin/esp/esp-idf/components/xtensa/include -I/home/jin/esp/esp-idf/components/xtensa/deprecated_include -I/home/jin/esp/esp-idf/components/lwip/include -I/home/jin/esp/esp-idf/components/lwip/include/apps -I/home/jin/esp/esp-idf/components/lwip/include/apps/sntp -I/home/jin/esp/esp-idf/components/lwip/lwip/src/include -I/home/jin/esp/esp-idf/components/lwip/port/include -I/home/jin/esp/esp-idf/components/lwip/port/freertos/include -I/home/jin/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/jin/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/jin/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/jin/esp/esp-idf/components/driver/deprecated -I/home/jin/esp/esp-idf/components/driver/i2c/include -I/home/jin/esp/esp-idf/components/driver/touch_sensor/include -I/home/jin/esp/esp-idf/components/driver/twai/include -I/home/jin/esp/esp-idf/components/driver/touch_sensor/esp32s3/include -I/home/jin/esp/esp-idf/components/esp_pm/include -I/home/jin/esp/esp-idf/components/esp_ringbuf/include -I/home/jin/esp/esp-idf/components/esp_driver_gpio/include -I/home/jin/esp/esp-idf/components/esp_driver_pcnt/include -I/home/jin/esp/esp-idf/components/esp_driver_gptimer/include -I/home/jin/esp/esp-idf/components/esp_driver_spi/include -I/home/jin/esp/esp-idf/components/esp_driver_mcpwm/include -I/home/jin/esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/jin/esp/esp-idf/components/esp_driver_i2s/include -I/home/jin/esp/esp-idf/components/esp_driver_sdmmc/include -I/home/jin/esp/esp-idf/components/sdmmc/include -I/home/jin/esp/esp-idf/components/esp_driver_sdspi/include -I/home/jin/esp/esp-idf/components/esp_driver_sdio/include -I/home/jin/esp/esp-idf/components/esp_driver_dac/include -I/home/jin/esp/esp-idf/components/esp_driver_rmt/include -I/home/jin/esp/esp-idf/components/esp_driver_tsens/include -I/home/jin/esp/esp-idf/components/esp_driver_sdm/include -I/home/jin/esp/esp-idf/components/esp_driver_i2c/include -I/home/jin/esp/esp-idf/components/esp_driver_uart/include -I/home/jin/esp/esp-idf/components/vfs/include -I/home/jin/esp/esp-idf/components/esp_driver_ledc/include -I/home/jin/esp/esp-idf/components/esp_driver_parlio/include -I/home/jin/esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/jin/workspaces/esp32workspace/desktop_controller/components/ssd1306 -I/home/jin/esp/esp-idf/components/esp_adc/include -I/home/jin/esp/esp-idf/components/esp_adc/interface -I/home/jin/esp/esp-idf/components/esp_adc/esp32s3/include -I/home/jin/esp/esp-idf/components/esp_adc/deprecated/include -I/home/jin/workspaces/esp32workspace/desktop_controller/components/iot_iconset -I/home/jin/esp/esp-idf/components/esp_wifi/include -I/home/jin/esp/esp-idf/components/esp_wifi/wifi_apps/include -I/home/jin/esp/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/jin/esp/esp-idf/components/esp_wifi/include/local -I/home/jin/esp/esp-idf/components/esp_event/include -I/home/jin/esp/esp-idf/components/esp_phy/include -I/home/jin/esp/esp-idf/components/esp_phy/esp32s3/include -I/home/jin/esp/esp-idf/components/esp_netif/include -I/home/jin/esp/esp-idf/components/nvs_flash/include -I/home/jin/esp/esp-idf/components/spi_flash/include -I/home/jin/esp/esp-idf/components/esp_partition/include -I/home/jin/esp/esp-idf/components/esp_http_client/include -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/jin/workspaces/esp32workspace/desktop_controller=. -fmacro-prefix-map=/home/jin/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/desktop_controller.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/desktop_controller.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/desktop_controller.c.obj -c /home/jin/workspaces/esp32workspace/desktop_controller/main/desktop_controller.c
/home/jin/workspaces/esp32workspace/desktop_controller/main/desktop_controller.c: In function 'app_main':
/home/jin/workspaces/esp32workspace/desktop_controller/main/desktop_controller.c:22:5: error: implicit declaration of function 'oled_display_text'; did you mean 'ssd1306_display_text'? [-Werror=implicit-function-declaration]
   22 |     oled_display_text(&dev, 0, "Hello, OLED!", false);
      |     ^~~~~~~~~~~~~~~~~
      |     ssd1306_display_text
/home/jin/workspaces/esp32workspace/desktop_controller/main/desktop_controller.c:26:10: warning: unused variable 'connected' [-Wunused-variable]
   26 |     bool connected = wifi_poll_status(&dev);
      |          ^~~~~~~~~
cc1: some warnings being treated as errors
[5/10] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/oled_screen/oled_screen.c.obj
/home/jin/workspaces/esp32workspace/desktop_controller/main/oled_screen/oled_screen.c: In function 'display_time_x3':
/home/jin/workspaces/esp32workspace/desktop_controller/main/oled_screen/oled_screen.c:170:9: warning: unused variable 'seg_offset' [-Wunused-variable]
  170 |     int seg_offset = (SCREEN_WIDTH - total_width) / 2;  // Center the text
      |         ^~~~~~~~~~
/home/jin/workspaces/esp32workspace/desktop_controller/main/oled_screen/oled_screen.c: In function 'time_update_task':
/home/jin/workspaces/esp32workspace/desktop_controller/main/oled_screen/oled_screen.c:182:16: warning: unused variable 'dev' [-Wunused-variable]
  182 |     SSD1306_t *dev = (SSD1306_t *)pvParameter;
      |                ^~~
ninja: build stopped: subcommand failed.
